--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infinizai</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
   </head>
   <body>
@@ -37,7 +37,7 @@
       </div>
     </nav>
     <section id="home">
-      <div class="container home">
+      <div class=" home container">
         <div class="home-text">
           <div class="comp-name">
             <img src="assets/images/home-fire.svg" alt="fire" />
@@ -59,7 +59,26 @@
       </div>
     </section>
     <main>
-      <section id="shop">
+      <section id="sponsor">
+        <div class="sponsor container">
+          <div class="sponsor-text">
+            <div class="sponsor-line">
+              <h2>Our Sponsors</h2>
+              <img src="./assets/images/sponsor-line.png" alt="LINE" width="288px">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Felis, nec donec in morbi pulvinar. Enim non pulvinar neque.</p>
+          </div>
+          <div class="sponsor-card">
+            <div class="sponsor-card-mini"><a href="#"><img src="./assets/images/sponsor1.svg" alt="IDEA"></a></div>
+            <div class="sponsor-card-mini"><a href="#"><img src="./assets/images/sponsor2.svg" alt="AMARA"></a></div>
+            <div class="sponsor-card-mini"><a href="#"><img src="./assets/images/sponsor3.svg" alt="LightAI"></a></div>
+            <div class="sponsor-card-mini"><a href="#"><img src="./assets/images/sponsor4.svg" alt="CIRCLE"></a></div>
+            <div class="sponsor-card-mini"><a href="#"><img src="./assets/images/sponsor5.svg" alt="MUZICA"></a></div>
+            <div class="sponsor-card-mini"><a href="#"><img src="./assets/images/sponsor6.svg" alt="LightAI"></a></div>
+          </div>
+        </div>
+      </section>
+      <section id="shop" class="shop">
         <div class="shop container">
           <div class="comp-name comp-name-2">
             <img src="assets/images/home-fire.svg" alt="fire" />
@@ -140,6 +159,74 @@
             <button>
               <img src="assets/images/play-icon.svg" alt="Icon" />
             </button>
+          </div>
+        </div>
+      </section>
+      <section id="multiplayer">
+        <div class="multiplayer">
+          <div class="multiplayer-card">
+            <img src="./assets/images/multiplayers-icon1.png" alt="ICON">
+          </div>
+          <div class="multiplayer-card">
+            <img src="./assets/images/multiplayers-icon2.png" alt="ICON">
+          </div>
+          <div class="multiplayer-card">
+            <img src="./assets/images/multiplayers-icon3.png" alt="ICON">
+          </div>
+        </div>
+      </section>
+      <section id="article">
+        <div class="article container">
+          <div class="article-start">
+            <div class="article-start-text">
+              <div class="comp-name comp-name-2">
+                <img src="assets/images/home-fire.svg" alt="fire" />
+                <p>FUTURE OF eSPORTS</p>
+              </div>
+              <h2>Latest News & Articles</h2>
+            </div>
+            <div class="home-btn1">
+              <button><a href="#">Explore More</a></button>
+            </div>
+          </div>
+          <div class="article-end">
+            <div class="article-end-left">
+              <img src="./assets/images/article-img1.png" alt="IMG">
+              <h6>April 2, 2021</h6>
+              <h3>Esports Group teams up with the Indianapolis Colts</h3>
+            </div>
+            <div class="article-end-right">
+              <div class="article-card">
+                <img src="./assets/images/article-img2.png" alt="IMG">
+                <h6>April 2, 2021</h6>
+                <h3>NAVI reveals s1mple fifth anniversary</h3>
+              </div>
+              <div class="article-card">
+                <img src="./assets/images/article-img3.png" alt="IMG">
+                <h6>April 2, 2021</h6>
+                <h3>A1esports Shares new picture</h3>
+              </div>
+              <div class="article-card">
+                <img src="./assets/images/article-img4.png" alt="IMG">
+                <h6>April 2, 2021</h6>
+                <h3>T1 unveil partnership with Razer</h3>
+              </div>
+              <div class="article-card">
+                <img src="./assets/images/article-img5.png" alt="IMG">
+                <h6>April 2, 2021</h6>
+                <h3>RX secures content partnership with</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="communit">
+        <div class="communit container">
+          <h2>Join the largest gaming community</h2>
+          <p>Nulla porttitor accumsan tincidunt. Curabitur non nulla sit amet nisl tempus lectus. Cras ultricies ligula sed magna dictum porta. Nulla quis lorem ut libero malesu ada feugiat. Nulla quis lorem ut libero malesuada feugiat. Vivamus magna justo</p>
+          <div class="communit-email">
+            <input class="email" type="email" placeholder=" Your Email Address" />
+            <button class="submit"><a href="#">Subscribe Now</a></button>
           </div>
         </div>
       </section>
