--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           </div>
         </div>
       </section>
-      <section id="communit">
+      <!-- <section id="communit">
         <div class="communit container">
           <h2>Join the largest gaming community</h2>
           <p>Nulla porttitor accumsan tincidunt. Curabitur non nulla sit amet nisl tempus lectus. Cras ultricies ligula sed magna dictum porta. Nulla quis lorem ut libero malesu ada feugiat. Nulla quis lorem ut libero malesuada feugiat. Vivamus magna justo</p>
@@ -229,7 +229,7 @@
             <button class="submit"><a href="#">Subscribe Now</a></button>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
     <footer></footer>
     <script src="js/main.js"></script>
